experimenting with stream apis