@@ -3,35 +3,33 @@ package no.sikt.nva.pubchannels.channelregistrycache;
 import com.opencsv.bean.CsvToBeanBuilder;
 import com.opencsv.enums.CSVReaderNullFieldIndicator;
 import java.io.StringReader;
-import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import java.util.stream.Stream;
 import software.amazon.awssdk.core.sync.ResponseTransformer;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 
 public final class ChannelRegistryCsvLoader {
 
-  private static final Logger logger = LoggerFactory.getLogger(ChannelRegistryCsvLoader.class);
   private static final int HEADER_POSITION = 1;
-  private final List<ChannelRegistryCacheEntry> cacheEntries;
+  private String report;
+  private final S3Client s3Client;
 
-  private ChannelRegistryCsvLoader(List<ChannelRegistryCacheEntry> cacheEntries) {
-    this.cacheEntries = cacheEntries;
+  public ChannelRegistryCsvLoader(S3Client s3Client) {
+    this.s3Client = s3Client;
   }
 
-  public static ChannelRegistryCsvLoader load(S3Client s3Client) {
+  public Stream<ChannelRegistryCacheEntry> getEntries() {
     var value = s3Client.getObject(getCacheRequest(), ResponseTransformer.toBytes()).asUtf8String();
-    return new ChannelRegistryCsvLoader(parseCsv(value));
+    return parseCsv(value);
   }
 
-  public List<ChannelRegistryCacheEntry> getCacheEntries() {
-    return cacheEntries;
+  public String getReport() {
+    return report;
   }
 
   private static GetObjectRequest getCacheRequest() {
@@ -41,24 +39,26 @@ public final class ChannelRegistryCsvLoader {
         .build();
   }
 
-  private static List<ChannelRegistryCacheEntry> parseCsv(String value) {
+  private Stream<ChannelRegistryCacheEntry> parseCsv(String value) {
     var lines = value.lines().toList();
     if (lines.isEmpty()) {
-      return List.of();
+      return Stream.of();
     }
 
     var header = lines.getFirst();
     var failures = new ConcurrentHashMap<Integer, FailureInfo>();
 
-    var result =
-        IntStream.range(1, lines.size())
-            .parallel()
-            .mapToObj(i -> processLine(Map.entry(i, lines.get(i).trim()), header, failures))
-            .filter(java.util.Objects::nonNull)
-            .toList();
-
-    logFailures(failures, lines.size() - HEADER_POSITION);
-    return result;
+    return IntStream.range(1, lines.size())
+        .parallel()
+        .mapToObj(i -> processLine(Map.entry(i, lines.get(i).trim()), header, failures))
+        .filter(java.util.Objects::nonNull)
+        .collect(
+            Collectors.collectingAndThen(
+                Collectors.toList(),
+                list -> {
+                  this.report = generateReport(failures, lines.size() - HEADER_POSITION);
+                  return list.stream(); // Re-stream for downstream
+                }));
   }
 
   private static ChannelRegistryCacheEntry processLine(
@@ -82,24 +82,23 @@ public final class ChannelRegistryCsvLoader {
     }
   }
 
-  private static void logFailures(Map<Integer, FailureInfo> failures, int totalLines) {
+  private static String generateReport(Map<Integer, FailureInfo> failures, int totalLines) {
     if (!failures.isEmpty()) {
-      var report =
-          failures.entrySet().stream()
-              .map(
-                  entry ->
-                      String.format(
-                          "  Line %d: %s | Content: %s%n",
+      return failures.entrySet().stream()
+          .map(
+              entry ->
+                  "  Line %d: %s | Content: %s"
+                      .formatted(
                           entry.getKey(), entry.getValue().errorMessage(), entry.getValue().line()))
-              .collect(
-                  Collectors.joining(
-                      "",
-                      String.format(
-                          "Failed to parse %d out of %d CSV lines:%n", failures.size(), totalLines),
-                      ""));
-      logger.warn(report);
+          .collect(
+              Collectors.joining(
+                  "%n".formatted(),
+                  "Failed to parse %d out of %d CSV lines:%n"
+                      .formatted(failures.size(), totalLines), // prefix
+                  "" // suffix
+                  ));
     } else {
-      logger.info("Successfully parsed all {} CSV lines", totalLines);
+      return "Successfully parsed all %s CSV lines".formatted(totalLines);
     }
   }
 
